@@ -1,2 +1,0 @@
-This package provides the Fontcache extension headers from the
-modular X.org X11 project.
