@@ -1,17 +1,0 @@
-# $NetBSD: Makefile,v 1.4 2012/10/29 05:06:12 asau Exp $
-#
-
-DISTNAME=		fontcacheproto-0.1.3
-CATEGORIES=		x11
-MASTER_SITES=		${MASTER_SITE_XORG:=proto/}
-EXTRACT_SUFX=		.tar.bz2
-
-MAINTAINER=		joerg@NetBSD.org
-HOMEPAGE=		http://xorg.freedesktop.org/
-COMMENT=		Fontcache extension headers from X.org
-
-USE_PKGLOCALEDIR=	yes
-PKGCONFIG_OVERRIDE+=	fontcacheproto.pc.in
-GNU_CONFIGURE=		yes
-
-.include "../../mk/bsd.pkg.mk"
