@@ -1,5 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 18:24:47 joerg Exp $
-include/X11/extensions/fontcache.h
-include/X11/extensions/fontcacheP.h
-include/X11/extensions/fontcachstr.h
-lib/pkgconfig/fontcacheproto.pc
