@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.3 2015/11/04 03:28:29 agc Exp $
-
-SHA1 (fontcacheproto-0.1.3.tar.bz2) = 07f6ab3e1e1efe71c51f50e95851d93d2a1de773
-RMD160 (fontcacheproto-0.1.3.tar.bz2) = 4d3689e4616957966c8b51e24cd4ae6b7fb08c18
-SHA512 (fontcacheproto-0.1.3.tar.bz2) = f9ae358c2e5f8bfc81dd4e62528ada3c0dc05c01abd614e8821e661723f070013fa9ba50560e7f45de254dcab148947b9ffb0d696f6f8265b8878aa341dfbe04
-Size (fontcacheproto-0.1.3.tar.bz2) = 84470 bytes
