@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2018,v 1.985 2018/03/02 15:14:21 wiz Exp $
+$NetBSD: CHANGES-2018,v 1.986 2018/03/02 15:15:50 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2018:
 
@@ -1380,3 +1380,4 @@ Changes to the packages collection and infrastructure in 2018:
 	Updated x11/libXfont2 to 2.0.3nb1 [wiz 2018-03-02]
 	Removed fonts/libXfontcache [wiz 2018-03-02]
 	Updated pkgtools/x11-links to 1.07 [wiz 2018-03-02]
+	Removed x11/fontcacheproto [wiz 2018-03-02]
